--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>responsive website</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/bootstrap.min.js"></script>
@@ -17,7 +15,6 @@
 </head>
 
 <body>
-
 <!-- Menu Bar -->
     <nav class="container navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
@@ -52,8 +49,7 @@
                     <div class="">
                         <h1 class="first-heading fw-bold">BE THE PENGUINES</h1>
                         <h1 class="second-heading fw-bold">OF WINTER</h1>
-                        <p class="pr-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptate
-                            consequatur quam.</p>
+                        <p class="pr-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptate consequatur quam.</p>
                         <a href="#">
                             <button class="btn-lg btn-success btn-buy">
                                 <i class="fas fa-shopping-cart"></i><span class="p-2">BUY NOW</span>
@@ -78,8 +74,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title  jacket-body">Yellow Coat Jacket</h5>
-                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.</p>
+                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="card-footer-border card-footer d-flex justify-content-between align-items-center">
                     <div>
@@ -96,8 +91,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title jacket-body">Ladies Jacket</h5>
-                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.</p>
+                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="card-footer-border card-footer d-flex justify-content-between align-items-center">
                     <div>
@@ -113,8 +107,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title jacket-body">Woman Leather Jacket</h5>
-                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.</p>
+                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="card-footer-border card-footer d-flex justify-content-between align-items-center">
                     <div>
@@ -143,8 +136,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title  jacket-body">Snowboard Jacket Mens</h5>
-                    <p class="card-text  jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.</p>
+                    <p class="card-text  jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="card-footer-border card-footer d-flex justify-content-between align-items-center">
                     <div>
@@ -160,8 +152,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title jacket-body">Man Leather Jackets</h5>
-                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.</p>
+                    <p class="card-text jacket-text pt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="card-footer-border card-footer d-flex justify-content-between align-items-center">
                     <div>
@@ -197,7 +188,7 @@
         </div>
     </section>
 
-    <!-- Last Section-->
+<!-- Last Section-->
     <section class="container container-fliud padding mt-5">
         <div class="container-fluid padding">
             <div class="row padding flex-column-reverse flex-sm-row d-flex justify-content-center align-items-center">
@@ -265,5 +256,4 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
