adding last code

--- a/index.html
+++ b/index.html
@@ -193,25 +193,25 @@
         <div class="container-fluid padding">
             <div class="row padding flex-column-reverse flex-sm-row d-flex justify-content-center align-items-center">
                 <div class="col-lg-5 col-md-7 col-sm-12 col-xs-12">
-                    <div class="shadow-lg bg-white rounded my-flex d-flex justify-content-center align-items-center">
+                    <div class="small-size-screen shadow-lg bg-white rounded my-flex d-flex justify-content-center align-items-center">
                         <div><img img src="logo_icon/image_1.png" class="img-fluid"></div>
                         <div class="d-flex flex-column">
                             <h4 class="side-text pl-5">Find the Perfect Fit</h4>
-                            <h6 class="pl-5">Everybody is different, which is why we offer styles for every body</h6>
+                            <h6 class="side-sub-text pl-5">Everybody is different, which is why we offer styles for every body</h6>
                         </div>
                     </div>
-                    <div class="shadow-lg bg-white rounded my-flex d-flex justify-content-center align-items-center">
+                    <div class="small-size-screen shadow-lg bg-white rounded my-flex d-flex justify-content-center align-items-center">
                         <div><img img src="logo_icon/image_2.png" class="img-fluid"></div>
                         <div class="d-flex flex-column">
                             <h4 class="side-text pl-5">Free Exchanges</h4>
-                            <h6 class="pl-5">One of the many reasons you can shop with peace of mind.</h6>
+                            <h6 class="side-sub-text pl-5">One of the many reasons you can shop with peace of mind.</h6>
                         </div>
                     </div>
-                    <div class="shadow-lg bg-white rounded my-flex d-flex justify-content-center align-items-center">
+                    <div class="small-size-screen shadow-lg bg-white rounded my-flex d-flex justify-content-center align-items-center">
                         <div><img img src="logo_icon/image_3.png" class="img-fluid"></div>
                         <div class="d-flex flex-column">
                             <h4 class="side-text pl-5">Contact Our Seller</h4>
-                            <h6 class="pl-5">They are here to help you. That's quite literally what we pay them for.
+                            <h6 class="side-sub-text pl-5">They are here to help you. That's quite literally what we pay them for.
                             </h6>
                         </div>
                     </div>
